# AutenticationGraphql

./: .gitignore  README.md  pyproject.toml
accounts/: admin.py  manager.py  models.py  schema.py  selectors.py  services.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_verify_date.py  0003_customuser_password.py
core/: schema.py  settings.py  urls.py
utils/: jwt_payload_handler.py  redis_connection.py
