[tool.poetry]
name = "autenticationgraphql"
version = "0.1.0"
description = ""
authors = ["Mohammadreza <mohammdrezasolo69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-environ = "^0.11.2"
graphene-django = "^3.2.1"
redis = "^5.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
